# serverless-examples

./: .gitignore  README.md  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: go-function-offline-testing.yml  python-function-offline-testing.yml  triggers-functions-offline-testing.yml
containers/bash-custom-image/: README.md
containers/bash-scheduled-job/: README.md  package.json  serverless.yml
containers/csharp-hello-world/: Dockerfile  Program.cs  README.md
containers/function-handler-java/: .gitignore  README.md  package.json  serverless.yml
containers/grpc-http2-go/: Dockerfile  README.md  go.mod  hello.pb.go  hello.proto  hello_grpc.pb.go
containers/hugging-face-inference/: Dockerfile  README.md  main.py  prompt.py
containers/long-running-task-go/: Dockerfile  README.md  go.mod
containers/memos-terraform/: README.md  main.tf
containers/nginx-cors-private-python/: .gitignore  Makefile  README.md  curl.tftpl  docker-compose.yml  index.tftpl
containers/nginx-hello-world/: README.md  package-lock.json  package.json  serverless.yml
containers/python-hello-world/: README.md  package-lock.json  package.json  serverless.yml
containers/python-s3-upload/: README.md
containers/ruby-hello-world/: Dockerfile  Gemfile  README.md  app.rb
containers/rust-hello-world/: Cargo.toml  Dockerfile  README.md
containers/sse/: Dockerfile  README.md  go.mod  go.sum
containers/terraform-nginx-hello-world/: main.tf  outputs.tf  providers.tf  variables.tf
containers/terraform-triggers/: .gitignore  Makefile  (+11 more)
functions/rust-mnist/: .gitignore  Cargo.toml  Dockerfile  README.md  serverless.yaml
functions/rust-mnist/common/: Cargo.toml
functions/rust-mnist/common/src/: lib.rs
functions/rust-mnist/function/: Cargo.toml
functions/rust-mnist/function/src/: lib.rs
functions/rust-mnist/src/: lib.rs
functions/rust-mnist/training/: Cargo.toml
functions/rust-mnist/training/src/: main.rs
functions/rust-mnist/www/: .gitignore  index.html  package.json  pnpm-lock.yaml
functions/rust-mnist/www/src/: App.css  App.tsx  Drawing.tsx  env.d.ts
kong-api-gateway/: Makefile  README.md  package.json
python-ethereum/: handler.py  package.json  serverless.yml
(+512 files in other folders)
