[package]
name = "function"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test-server"

[dependencies]
axum = "0.7.5"
tower = "0.4"
tower-http = { version = "0.3.4", features = ["cors"] }
tokio-test = "0.4"
rust-s3 = { version = "0.32.3", default-features = false, features = [
    "tokio-rustls-tls",
] }
tokio = { version = "1.2", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
dfdx = { version = "0.10.0" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
pollster = "0.2.5"
http = "1.1.0"

[dependencies.common]
path = "./common"

[workspace]
members = ["training", "common"]
