[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dfdx = { version = "0.10.0", features = ["numpy"] }
rust-s3 = { version = "0.32.3", default-features = false, features = [
    "tokio-rustls-tls",
] }
anyhow = "1.0"
